Alter the whole to the new ChijiRender
Signed-off-by: Richard Lea <chigix@zoho.com>

--- a/Tpl/Default/Todo/index.html
+++ b/Tpl/Default/Todo/index.html
@@ -1,5 +1,5 @@
-<layout name='TodoMODULE/indexLayout' />
-<include file="TodoMODULE:TodoApp" c="" />
+<layout name='Todo/indexLayout' />
+<include file="TodoView:TodoApp" c="" />
 
 {//FOOTER}
 <footer id="info">
@@ -9,6 +9,6 @@
 <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 
 {//TEMPLATE}
-<include file="TodoMODULE:TodosView" c="" />
-<include file="TodoMODULE:TodoStatsView" c="" />
+<include file="TodoView:TodosView" c="" />
+<include file="TodoView:TodoStatsView" c="" />
 </footer>
