--- a/Tpl/Default/TodoView/TodoApp.html
+++ b/Tpl/Default/TodoView/TodoApp.html
@@ -1,4 +1,4 @@
-<section id="TodoMODULE_TodoApp" class="[c]">
+<section id="TodoView_TodoApp" class="[c]">
 	<header id="header">
 		<h1>todos</h1>
 		<input id="new-todo" placeholder="What needs to be done?" autofocus>
@@ -11,4 +11,4 @@
 	</section>
 <footer id="footer"></footer>
 </section>
-<script type="text/javascript">var TodoMODULE_TodoApp = {:json_encode($TodoMODULE_TodoApp)};</script>
+<script type="text/javascript">var TodoView_TodoApp = {:json_encode($TodoView_TodoApp)};</script>
