--- a/Tpl/Default/TodoView/TodoStatsView.html
+++ b/Tpl/Default/TodoView/TodoStatsView.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="TodoMODULE_TodoStatsView">
+<script type="text/template" id="TodoView_TodoStatsView">
 	<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
 	<ul id="filters">
 		<li>
@@ -15,4 +15,4 @@
 	<button id="clear-completed">Clear completed (<%= completed %>)</button>
 	<% } %>
 </script>
-<script type="text/javascript">var TodoMODULE_TodoStatsView = {:json_encode($TodoMODULE_TodoStatsView)};</script>
+<script type="text/javascript">var TodoView_TodoStatsView = {:json_encode($TodoView_TodoStatsView)};</script>
