--- a/Tpl/Default/TodoView/TodosView.html
+++ b/Tpl/Default/TodoView/TodosView.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="TodoMODULE_TodosView">
+<script type="text/template" id="TodoView_TodosView">
 	<div class="view">
 		<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 		<label><%= title %></label>
@@ -6,4 +6,4 @@
 	</div>
 	<input class="edit" value="<%= title %>">
 </script>
-<script type="text/javascript">var TodoMODULE_TodosView = {:json_encode($TodoMODULE_TodosView)};</script>
+<script type="text/javascript">var TodoView_TodosView = {:json_encode($TodoView_TodosView)};</script>
