--- a/Tpl/Default/Todo/index.html
+++ b/Tpl/Default/Todo/index.html
@@ -9,6 +9,6 @@
 <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 
 {//TEMPLATE}
-<include file="TodoView:TodosView" c="" />
+<include file="TodoView:TodoView" c="" />
 <include file="TodoView:TodoStatsView" c="" />
 </footer>
