--- a/Tpl/Default/Todo/testLayout.html
+++ b/Tpl/Default/Todo/testLayout.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
-<title>CHIGIX-Backbone.js Todos</title><meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>test</title><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta name="description" content="页面描述">
 <!-- 加载CSS样式表 -->
-<link href="__CHIJI__/css/todo-index.css" rel="stylesheet">
+<link href="__CHIJI__/css/bootstrap.min.css" rel="stylesheet">
+<link href="__CHIJI__/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="__CHIJI__/css/todo-test.css" rel="stylesheet">
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements --><!--[if lt IE 9]><script src="__CHIJI__/js/html5.js"></script><![endif]--></head><body>{__CONTENT__}
 <!-- 加载JavaScript
 ================================================== -->
@@ -18,10 +20,21 @@ requirejs.config({
     "paths": {
     	"bootstrap":"__CHIJI__/js/bootstrap.min",
         "mvc":"__CHIJI__/js/jquery.mvc",
+        "backbone":"__CHIJI__/js/backbone-min",
+    	"underscore":"__CHIJI__/js/underscore-min",
+        "localstorage":"__CHIJI__/js/backbone.localStorage",
     	"app": "__CHIJI__/js"
     },
-    'generateSourceMaps':true,
     "shim": {
+        'aaa':{exports:'aaa'},
+        'jquery':{exports:'$'},
+        'underscore':{
+        　　exports: '_'
+        },
+        'backbone': {
+            deps: ['underscore', 'jquery'],
+            exports: 'Backbone'
+        },
         'localstorage':{
             deps:['backbone'],
             exports:'Backbone.LocalStorage'
@@ -36,4 +49,5 @@ requirejs.config({
 {/*
 	Load the main app module to start the app
 */}
-requirejs(["app/todo-index"]);</script></body></html>
+requirejs(["app/todo-test"]);
+</script></body></html>
